# franka_direct

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  TODO  build.sh  launch_server.sh  launch_server_cartesian.sh  parameters.py  pyproject.toml  start_teleop.sh
.docker/laptop/: Dockerfile.laptop  docker-compose-laptop.yaml  entrypoint.sh
.docker/nuc/: Dockerfile.nuc  docker-compose-nuc.yaml
config/: controller.yaml  controller_cartesian.yaml  process.yaml  teleop.yaml
oculus_reader/oculus_reader/: reader.py
proto/: franka_control.proto
python/: franka_direct_client.py  generate_stubs.sh  robot_reset.py
robot_ik/: arm.py  robot_ik_solver.py
scripts/: build_rlds.py  data_recorder.py  hdf5_to_video.py  preprocess_franka_data.py  simple_joint_direct.py  simple_pose_direct.py  simple_teleop_direct.py  simple_teleop_direct_torque.py  start_teleop.sh  test_vr_readout.py  vr_controller.py  zed_utils.py
scripts/rlds_dataset/franka_fr3/: franka_fr3_dataset_builder.py
scripts/setup/: laptop_setup.sh  nuc_setup.sh
src/: franka_server.cpp  franka_server_cartesian.cpp
